# k3s-client

./: Makefile  README.md  __init__.py  config.py  exceptions.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  run_test.yml
api/: __init__.py  applications.py  pods.py
cli/: __init__.py  kubectl.py
examples/: apply_tosca_example.py  configmap_example.py  delete_microservice_example.py  deploy_microservice_example.py  manifest_apply_example.py  manifest_delete_example.py  manifest_example.py  manifest_generator_example.py  microservice_example.py  migrate_microservice_node_example.py  optimizer_actions_example.py  pod_node_mapping_example.py  pod_runtime_operations_example.py  registry_secret_example.py  scale_microservice_example.py  update_microservice_image_example.py
k3s_client/: __init__.py  config.py  exceptions.py
k3s_client/agent/: __init__.py  client.py
k3s_client/api/: __init__.py  applications.py  pods.py
k3s_client/cli/: kubectl.py
k3s_client/templates/: configmap.yaml.j2  deployment.yaml.j2  ingress.yaml.j2  ingress_route_tcp.yaml.j2  service.yaml.j2  traefik-acme.yaml.j2
k3s_client/utils/: __init__.py  kubeconfig.py  manifest.py
tests/: test_api.py  test_kubectl.py  test_manifest.py  test_pods.py
utils/: __init__.py  kubeconfig.py  logging.py
