[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k3s-client"
version = "0.1.0"
description = "Swarmchestrate k3s client"
readme = "README.md"
authors = [
    {name = "Gunjan", email = "G.Kotak@westminster.ac.uk"},
]
license = {text = "Apache2"}

dependencies = [
  kubernetes>=26.1.0
]

[tool.setuptools.packages.find]
where = ["."]
include = ["k3s-client*"]

