[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k3s-client"
version = "0.1.4"
description = "Swarmchestrate k3s client"
readme = "README.md"
authors = [
    {name = "Gunjan", email = "G.Kotak@westminster.ac.uk"}
]
license = {text = "Apache2"}

dependencies = [
    "kubernetes>=26.1.0",
    "jinja2>=3.1.0",
    "ruamel.yaml>=0.17.0",
    "Sardou>=0.12.2",
    "ruff>=0.14.13"
]
requires-python = ">=3.12,<4.0"

[tool.pytest.ini_options]
pythonpath = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["k3s_client*"]

